# nlp-project

./: LICENSE  README.md  pyproject.toml
nlp_project/: cosine_sim.py  gec_shift_analysis.py  scoring.py  sentence_reconstruction.py  text_recon2.py  text_reconstruction.py  util.py
nlp_project/outputs/: sent1_og.txt  sent1_out.txt  sent2_og.txt  sent2_out.txt  similarities.json  text1_pipeA.txt  text1_pipeB.txt  text2_gec.txt  text2_pipeA.txt  text2_pipeB.txt
nlp_project/results/text1/: similarities_A.csv  similarities_A.txt  similarities_B.csv  similarities_B.txt  similarities_C.csv  similarities_C.txt  summary.txt
nlp_project/results/text2/: similarities_A.csv  similarities_B.csv  similarities_C.csv
outputs/: similarities.json  text1_gec.txt  text1_pipeB.txt  text1_pipeC.txt  text2_pipeB.txt  text2_pipeC.txt
