[project]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Elia Etzanidi",email = "eliaetz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (==1.26.4)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (==3.7.2)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
