[project]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Elia Etzanidi",email = "eliaetz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy (==1.26.4)",
    "nltk (>=3.9.1,<4.0.0)",
    "spacy (==3.7.2)",
    "transformers (>=4.56.1,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "language-tool-python (>=2.9.4,<3.0.0)",
    "protobuf (<4)",
    "wordfreq (>=3.1.1,<4.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
